backend/api/tests/integration/image/snapshots/integration__image__user__get.snap
---
source: tests/integration/image/user.rs
expression: body
---
{
  "metadata": {
    "id": "[id]",
    "size": "Sticker"
  }
}
