backend/api/tests/integration/image/snapshots/integration__image__user__list_kind.snap
---
source: tests/integration/image/user.rs
expression: body
---
{
  "images": [
    {
      "metadata": {
        "id": "89125d88-ffaa-11eb-86a5-9fd50ab8d8df",
        "size": "Sticker"
      }
    },
    {
      "metadata": {
        "id": "89fa4c10-ffaa-11eb-86a5-870d6a01dc37",
        "size": "Sticker"
      }
    },
    {
      "metadata": {
        "id": "8a2469b4-ffaa-11eb-86a5-330f321d2a3f",
        "size": "Sticker"
      }
    }
  ]
}
